# mlir-learn

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
02-writing-our-first-pass/: CMakeLists.txt
02-writing-our-first-pass/include/mlir-tutorial/Transform/Affine/: AffineFullUnroll.hpp
02-writing-our-first-pass/include/mlir-tutorial/Transform/Arith/: MulToAdd.hpp
02-writing-our-first-pass/lib/: CMakeLists.txt
02-writing-our-first-pass/lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.hpp
02-writing-our-first-pass/lib/Transform/Arith/: MulToAdd.cpp
02-writing-our-first-pass/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  lit.cfg.py
02-writing-our-first-pass/tools/: CMakeLists.txt  tutorial-opt.cpp
03-using-table-gen-for-passes/: CMakeLists.txt
03-using-table-gen-for-passes/include/: CMakeLists.txt
03-using-table-gen-for-passes/include/03-using-table-gen-for-passes/: CMakeLists.txt
03-using-table-gen-for-passes/include/03-using-table-gen-for-passes/Transform/Affine/: AffineFullUnroll.hpp  AffineFullUnrollPatternRewrite.hpp  Passes.h  Passes.td
03-using-table-gen-for-passes/include/mlir-tutorial/Transform/Affine/: AffineFullUnroll.hpp  AffineFullUnrollPatternRewrite.hpp  Passes.h
03-using-table-gen-for-passes/lib/: CMakeLists.txt
03-using-table-gen-for-passes/lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnrollPatternRewrite.cpp
03-using-table-gen-for-passes/lib/Transform/Arith/: MulToAdd.cpp
03-using-table-gen-for-passes/tests/: mul_to_add.mlir
03-using-table-gen-for-passes/tools/: CMakeLists.txt  tutorial-opt.cpp
04-defining-a-new-dialect/: CMakeLists.txt
04-defining-a-new-dialect/include/: CMakeLists.txt
04-defining-a-new-dialect/include/mlir-tutorial/Dialect/Poly/: PolyOps.td  PolyTypes.hpp  PolyTypes.td
04-defining-a-new-dialect/include/mlir-tutorial/Transform/Affine/: Passes.hpp
04-defining-a-new-dialect/include/mlir-tutorial/Transform/Arith/: Passes.td
04-defining-a-new-dialect/lib/: CMakeLists.txt
04-defining-a-new-dialect/lib/Dialect/Poly/: PolyDialect.cpp
04-defining-a-new-dialect/tests/: affine_loop_unroll.mlir  lit.cfg.py  mul_to_add.mlir  poly_syntax.mlir
04-defining-a-new-dialect/tools/: CMakeLists.txt  tutorial-opt.cpp
05-using-traits/: CMakeLists.txt
05-using-traits/include/: CMakeLists.txt
05-using-traits/include/mlir-tutorial/Dialect/Poly/: PolyDialect.td  PolyOps.td
05-using-traits/include/mlir-tutorial/Transform/Affine/: Passes.td
05-using-traits/lib/: CMakeLists.txt
05-using-traits/lib/Dialect/Poly/: PolyDialect.cpp
05-using-traits/tests/: affine_loop_cannot_unroll.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_syntax.mlir
05-using-traits/tools/: CMakeLists.txt
06-folders-and-constant-propagation/: CMakeLists.txt
06-folders-and-constant-propagation/include/: CMakeLists.txt
06-folders-and-constant-propagation/include/mlir-tutorial/Dialect/Poly/: PolyDialect.hpp  PolyOps.hpp  (+2 more)
06-folders-and-constant-propagation/lib/: CMakeLists.txt
06-folders-and-constant-propagation/lib/Dialect/Poly/: PolyDialect.cpp  PolyOps.cpp
06-folders-and-constant-propagation/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  arith_sccp.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_sccp.mlir  poly_syntax.mlir
06-folders-and-constant-propagation/tools/: CMakeLists.txt  tutorial-opt.cpp
07-varifiers/: CMakeLists.txt
07-varifiers/include/: CMakeLists.txt
07-varifiers/lib/: CMakeLists.txt
07-varifiers/lib/Dialect/Poly/: PolyOps.cpp
07-varifiers/lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnrollPatternRewrite.cpp
07-varifiers/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  arith_sccp.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_sccp.mlir  poly_syntax.mlir  poly_verifier.mlir
07-varifiers/tools/: CMakeLists.txt
08-canonicalizers-and-declarative-rewrite-patterns/: CMakeLists.txt
08-canonicalizers-and-declarative-rewrite-patterns/include/: CMakeLists.txt
08-canonicalizers-and-declarative-rewrite-patterns/lib/: CMakeLists.txt
08-canonicalizers-and-declarative-rewrite-patterns/lib/Transform/Arith/: MulToAdd.cpp
08-canonicalizers-and-declarative-rewrite-patterns/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  arith_sccp.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_sccp.mlir  poly_syntax.mlir  poly_verifier.mlir
08-canonicalizers-and-declarative-rewrite-patterns/tools/: CMakeLists.txt
09-dialect-conversion/: CMakeLists.txt
09-dialect-conversion/include/: CMakeLists.txt
09-dialect-conversion/lib/: CMakeLists.txt
09-dialect-conversion/lib/Conversion/PolyToStandard/: PolyToStandard.cpp
09-dialect-conversion/lib/Dialect/Poly/: PolyOps.cpp
09-dialect-conversion/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  arith_sccp.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_sccp.mlir  poly_syntax.mlir  poly_to_standard.mlir  poly_verifier.mlir
09-dialect-conversion/tools/: CMakeLists.txt  tutorial-opt.cpp
10-lowering-poly-to-llvm/: CMakeLists.txt
10-lowering-poly-to-llvm/include/: CMakeLists.txt
10-lowering-poly-to-llvm/lib/: CMakeLists.txt
10-lowering-poly-to-llvm/lib/Conversion/PolyToStandard/: PolyToStandard.cpp
10-lowering-poly-to-llvm/lib/Dialect/Poly/: PolyOps.cpp
10-lowering-poly-to-llvm/lib/Transform/Affine/: AffineFullUnrollPatternRewrite.cpp
10-lowering-poly-to-llvm/tests/: affine_loop_cannot_unroll.mlir  affine_loop_unroll.mlir  arith_sccp.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalize.mlir  poly_sccp.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_llvm_main.c  poly_to_standard.mlir  poly_verifier.mlir
10-lowering-poly-to-llvm/tools/: CMakeLists.txt  tutorial-opt.cpp
(+21 files in other folders)
